@@ -21,6 +21,8 @@
  - make fstab fields used to 'fill in' shorthand entries configurable
    This means you do not have to have 'nobootwait' in the values
    (LP: #785542)
+ - read /etc/ssh/sshd_config for AuthorizedKeysFile rather than
+   assuming ~/.ssh/authorized_keys (LP: #731849)
 0.6.1:
  - fix bug in fixing permission on /var/log/cloud-init.log (LP: #704509)
  - improve comment strings in rsyslog file tools/21-cloudinit.conf
